# hts-epita-gistre

ctf/: extract.sh  format0  heap0  overflow0  overflow1  overflow2  shellcode0  shellcode0.s  shellcode1  shellcode1.s
hello/: Makefile  aux.c  aux.h  gnu_hash.c  gnu_hash.h  hello.c  lookup.c  lookup.h  printf.c  printf.h
kprobe-open/: Makefile  kprobe-open.c
readelf/: Makefile.am  autogen.sh  configure.ac
readelf/src/: readelf.c  readelf.h  xlat.c  xlat.h
readelf/src/xlat/: ch_type.in  d_tag.in  e_machine.in  e_type.in  e_version.in  p_type.in  sh_type.in  st_info_ST_BIND.in  st_info_ST_TYPE.in  st_other-VISIBILITY.in  st_shndx.in
readelf/tests/: cat.sh  fail.sh  fail2.sh  fail3.sh  ls.sh  printf-test.c  simple.sh  simple2.sh
